<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity"
    android:background="@drawable/splash_screen_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/zonaBack"
        android:padding="5dp">
        <Button
            android:id="@+id/button_back"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/back"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/titlu"
        android:layout_below="@id/zonaBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/options_title"/>

        <Button
            android:id="@+id/button_delete_pics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlu"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/delete_pictures"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_delete_pics"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/model"/>

            <Spinner
                android:id="@+id/model_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:entries="@array/models"
                android:prompt="@string/model" />
        </RelativeLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/save"
        />

</RelativeLayout>