<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ClassifyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/zonaBack"
        android:padding="5dp">
        <Button
            android:id="@+id/button_back_clasif"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/back"/>
        <Button
            android:id="@+id/button_gallery_clasif"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:text="@string/gallery"/>
    </RelativeLayout>
    <!--Locul in care va aparea imaginea aleasa-->
    <ImageView
        android:id="@+id/image_view"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_image_24"
        android:layout_width="400dp"
        android:layout_below="@id/zonaBack"
        android:layout_height="300dp"/>
    <!--Buton adaugare poza-->
    <Button
        android:id="@+id/capture_image_btn"
        android:text="@string/poza"
        android:layout_below="@id/image_view"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/classifier_image_btn"
        android:text="@string/clasifica_planta"
        android:layout_below="@id/capture_image_btn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:enabled="false"
        android:layout_height="wrap_content"/>

    <GridLayout
        android:id="@+id/zonaClasificare"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:alignmentMode="alignBounds"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:layout_below="@id/classifier_image_btn"
        android:padding="5dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textClasificare1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/class_placeholder" />
            <TextView
                android:id="@+id/textProcent1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/textClasificare1"
                android:text="@string/procent" />
            <ImageView
                android:id="@+id/imagineClasificare1"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textProcent1"
               />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textClasificare2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/class_placeholder"/>
            <TextView
                android:id="@+id/textProcent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/textClasificare2"
                android:text="@string/procent" />
            <ImageView
                android:id="@+id/imagineClasificare2"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textProcent2"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnWeight="1"
            >
            <TextView
                android:id="@+id/textClasificare3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/class_placeholder" />
            <TextView
                android:id="@+id/textProcent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/textClasificare3"
                android:text="@string/procent" />
            <ImageView
                android:id="@+id/imagineClasificare3"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textProcent3"
                />
        </RelativeLayout>

    </GridLayout>


    <RelativeLayout
        android:id="@+id/zonaActiuni"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5dp">
        <Button
            android:id="@+id/button_anulare_clasif"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/button_adaug_classif"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:text="@string/save"/>
    </RelativeLayout>

</RelativeLayout>